[metadata]
name = pytla
version = 0.0.1
author = Alex Kaufman
author_email = alexanderkaufman@montana.edu
description = A python library for controlling ITLA and microITLA devices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexrkaufman/pytla
project_urls =
    Bug Tracker = https://github.com/alexrkaufman/pytla/issues
    Docs = https://alexrkaufman.github.io/pytla/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =itla 
python_requires = >=3.6
install_requires =
    pyserial
    pyyaml
    scipy
include_package_data = True

[options.packages.find]
where = itla